# B.sc_Computer_Science

./: README.md
Projects/Airplane_Simulator/: CMakeLists.txt  Command.h  CommandExpression.h  CommandFactory.h  ComunicateWithSimulator.cpp  ComunicateWithSimulator.h  ConditionCommand.cpp  ConditionCommand.h  ConnectFactory.h  ConnectToServerCommand.cpp  ConnectToServerCommand.h  Div.h  EnterCCommand.h  EnterCFactory.h  Expression.h  ExpressionBuilder.cpp  ExpressionBuilder.h  IfCommand.cpp  IfCommand.h  IfFactory.h  LoopCommand.cpp  LoopCommand.h  MapsHandler.cpp  MapsHandler.h  Minus.h  Mul.h  OpenDataServerCommand.cpp  OpenDataServerCommand.h  OpenDataServerFactory.h  Plus.h  PrintCommand.cpp  PrintCommand.h  PrintFactory.h  README.md  SetCommand.cpp  SetCommand.h  SetFactory.h  SleepCommand.h  SleepFactory.h  Val.h  (+7 more)
Projects/Space_Invaders/: README.md
Projects/Space_Invaders/src/: SpaceInvaders.java
Projects/Space_Invaders/src/menu/: Menu.java  (+1 more)
Year_2_Semester_B/Algorithmic_Programming_2-89211/ex1/: Output.txt  SingleMission.cs
Year_2_Semester_B/Algorithmic_Programming_2-89211/ex4/: Server.cs  server.py
Year_3_Semester_A/Artificial_Intelligence-89570/ex2/: Attribute Information.docx
Year_3_Semester_A/Law_and_business;Legal_issues_when_conducting_business_with_Japan-54521/: ~$0121exam.docx  ~$רון מבחן משפט ועסקים ביפן 2020.docx  ~WRL0003.tmp
Year_3_Semester_A/Law_and_business;Legal_issues_when_conducting_business_with_Japan-54521/Presentation/: Presentation.pptx
Year_3_Semester_B/Seminar;behavior_recognition-89483/: Presenation.pptx  ~$הטעייה צפייה.pptx
(+270 files in other folders)
